Fix the home page how to help section  on mobile

--- a/assets/scss/_homepage.scss
+++ b/assets/scss/_homepage.scss
@@ -27,6 +27,7 @@
 
     @media screen and (max-width: 800px) {
       max-width: 75vw;
+      margin: 3% auto;
     }
   }
 
@@ -183,6 +184,7 @@
 
       @media screen and (max-width: 800px) {
         max-width: 80vw;
+        padding: 3% 0;
       }
     }
 
@@ -213,6 +215,15 @@
             }
           }
 
+          @media screen and (max-width: 800px) {
+
+            &:last-of-type {
+              grid-column: 1/3;
+              width: 50%;
+              margin: 0 auto;
+            }
+          }
+
           a {
             text-decoration: none;
             color: inherit;
@@ -233,7 +244,7 @@
           display: grid;
           grid-template-columns: repeat(2, 1fr);
           grid-template-rows: repeat(3, auto);
-          grid-gap: 1rem;
+          grid-gap: 1.2rem;
         }
       }
     }
