--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -99,6 +99,7 @@ footer {
 
       &.footer__stories--mobile {
         display: block;
+        padding: 5%;
       }
     }
   }
